--- a/views/course/index.ejs
+++ b/views/course/index.ejs
@@ -18,7 +18,7 @@
             <img src="/assets/avatar-1.png" alt="" />
           </div>
           <div class="card-details">
-            <h3>Course title</h3>
+            <h3 class="course-title">Course title</h3>
             <p><strong>1.</strong> Lecture number</p>
           </div>
         </div>
@@ -27,7 +27,7 @@
             <img src="/assets/avatar-2.png" alt="" />
           </div>
           <div class="card-details">
-            <h3>Course title</h3>
+            <h3 class="course-title">Course title</h3>
             <p><strong>1.</strong> Lecture number</p>
           </div>
         </div>
@@ -36,7 +36,7 @@
             <img src="/assets/avatar-3.png" alt="" />
           </div>
           <div class="card-details">
-            <h3>Course title</h3>
+            <h3 class="course-title">Course title</h3>
             <p><strong>1.</strong> Lecture number</p>
           </div>
         </div>
