--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -1,7 +1,7 @@
 <%- layout("/layouts/boilerplate") %>
 
 <body>
-  <form action="/login" method="post" class="signin-form">
+  <form action="/login" method="post" class="signin-form login-form">
     <h1>Login</h1>
     <div class="signin-username">
       <label for="username">Username</label>
