--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -2,7 +2,7 @@
   <a href="/courses">
     <img src="/assets/dark-brand-logo.svg" class="brand-logo"
   /></a>
-  <a href="/courses" class="categories">Home</a>
+  <a href="/courses" class="nav-element categories">Home</a>
 
   <!-- search-bar -->
   <div class="search">
@@ -10,17 +10,30 @@
     <img src="/assets/search-icon.svg" class="search-icon" />
   </div>
   <% if (!currentUser) { %>
-  <a href="/signin" class="fa-bussiness"> Sign In</a>
-  <a href="/login" class="tech-on-fa"> Login</a>
+  <a href="/signin" class="fa-bussiness nav-element"> Sign In</a>
+  <a href="/login" class="tech-on-fa nav-element"> Login</a>
 
   <% } %> <% if (currentUser) { %>
-  <a href="/logout" class="tech-on-fa">Logout</a>
-  <a href="/users/<%= currentUser._id %>/" class="fa-user-learning"
+  <a href="/logout" class="user-learning nav-element">Logout</a>
+  <a href="/users/<%= currentUser._id %>/" class="fa-user-learning nav-element"
     >My learning</a
   >
   <% } %>
-  <a href="/courses/new">Create course</a>
-  <a href="/tutor" class="fa-user-learning">Become Tutor</a>
+  <a href="/courses/new " class="nav-element">Create course</a>
+  <a href="/tutor" class="fa-teacher nav-element"
+    >Become Tutor
+    <div class="about-tutor-nav">
+      <p>
+        <strong>
+          Turn what you know into an opportunity and reach millions around the
+          world.
+        </strong>
+      </p>
+      <form action="" method="get">
+        <button class="btn btn-2"><strong>Learn more</strong></button>
+      </form>
+    </div>
+  </a>
 
   <div class="icons">
     <!-- <img src="/assets/insta.svg" alt="instagram" /> -->
