--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -8,7 +8,7 @@
       <input
         type="text"
         name="username"
-        id="username"
+        id="jonhiton"
         placeholder="username"
         required
       />
